--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -23,13 +23,41 @@ EXTRA_IMAGEDEPENDS += "fm-ucode rcw"
 
 USE_VT ?= "0"
 
-IMAGE_INSTALL_append = " i2c-tools eth-config fmc nfs-utils readline \
-                         boost curl libxml2 zlib libpng nano tree perl \
-                         perl-module-posix kernel-module-tsc tscmon \
-                         coreutils sysfsutils sysklogd libhugetlbfs \
-                         kmod kernel-modules sysstat pciutils screen \
-                         ifc14xx-conf procserv libtirpc sudo dnf \
-                         host-setup jpeg i2c-udev-rules"
+IMAGE_INSTALL_append = " i2c-tools \
+                         eth-config \
+                         fmc \
+                         nfs-utils \
+                         readline \
+                         boost \
+                         curl \
+                         libxml2 \
+                         zlib \
+                         libpng \
+                         nano \
+                         tree \
+                         perl \
+                         perl-module-posix \
+                         kernel-module-tsc \
+                         tscmon \
+                         coreutils \
+                         sysfsutils \
+                         sysklogd \
+                         libhugetlbfs \
+                         kmod \
+                         kernel-modules \
+                         sysstat \
+                         pciutils \
+                         screen \
+                         ifc14xx-conf \
+                         procserv \
+                         libtirpc \
+                         sudo \
+                         dnf \
+                         host-setup \
+                         jpeg \
+                         i2c-udev-rules \
+                         python3-pkgutil \
+                         "
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
