--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -201,6 +201,7 @@ release_images_tags:
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/rt/
     - cd ../../../../../
     - cd build_ifc14xx-64b/tmp/deploy/sdk
+    - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
     - jfrog rt upload --flat=false "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
@@ -212,6 +213,7 @@ release_images_tags:
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
     - cd ../../../../../
     - cd build_cct-64/tmp/deploy/sdk
+    - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
     - jfrog rt upload --flat=false "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
@@ -234,6 +236,7 @@ release_images_web:
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/rt/
     - cd ../../../../../
     - cd build_ifc14xx-64b/tmp/deploy/sdk
+    - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
     - cd ../../../../
@@ -244,6 +247,7 @@ release_images_web:
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/rt/
     - cd ../../../../../
     - cd build_cct-64/tmp/deploy/sdk
+    - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
 
