--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -203,7 +203,8 @@ release_images_tags:
     - cd ../../../../../
     - cd build_ifc14xx-64b/tmp/deploy/sdk
     - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
-    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - jfrog rt del --recursive=false --props="top=true" --quiet=true "yocto/toolchain/ifc14xx*"
+    - jfrog rt upload --flat=false --props="top=true" "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
     - cd ../../../../
@@ -215,7 +216,8 @@ release_images_tags:
     - cd ../../../../../
     - cd build_cct-64/tmp/deploy/sdk
     - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
-    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - jfrog rt del --recursive=false --props="top=true" --quiet=true "yocto/toolchain/cct*"
+    - jfrog rt upload --flat=false --props="top=true" "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
